# VulkanProject

./: .gitignore  CMakeLists.txt
graphics/: device.cpp  device.hpp  instance.cpp  instance.hpp
includes/: graphics.hpp
settings/: windowSettings.json
shaders/: compile.bat  vert.spv  vertexShader.vert
src/: main.cpp
src/graphics/: device.cpp  device.hpp  instance.cpp  instance.hpp  renderer.cpp  renderer.hpp
